Fix build error on missing file
The previous way we were building the list of files to run through gofmt
was causing it to throw an error about a non-existent file that did
exist.

Since we don't currently have any vendored code, just run gofmt against
*.go

--- a/.travis.yml
+++ b/.travis.yml
@@ -14,12 +14,8 @@ matrix:
         - go: tip
           fast_finish: true
 
-before_script:
-  - GO_FILES=$(find . -iname '*.go' | grep -v /vendor/)
-  - PKGS=$(go list ./... | grep -v /vendor/)
-
 script:
-  - test -z $(gofmt -s -l $GO_FILES)
+  - test -z $(gofmt -s -l .)
   - go test -v -race -coverprofile=coverage.txt -covermode=atomic $PKGS
   - go vet $PKGS
 
